Added namazu.spec (RPM - RedHat's packaging manager control file)

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 
 @SET_MAKE@
-EXTRA_DIST = README-ja
+EXTRA_DIST = README-ja namazu.spec.in
 EXTRA_DIRS = lib
 # EXTRA_DIRS = contrib doc lib misc
 SUBDIRS = src
@@ -9,9 +9,9 @@ SUBDIRS = src
 pkgdatadir = @prefix@/@PACKAGE@
 
 install-data-local:
-	$(mkinstalldirs) $(DESTDIR)$(pkgdatadir)/index
+	$(mkinstalldirs) $(DESTDIR)$(libdir)/index
 	for subdir in $(EXTRA_DIRS); do \
-	  cp -rp $(srcdir)/$$subdir $(DESTDIR)$(pkgdatadir); \
+	  cp -rp $(srcdir)/$$subdir $(DESTDIR)$(libdir); \
 	done
 
 dist-hook:
@@ -22,3 +22,7 @@ dist-hook:
 	  rm -rf $(distdir)/$$subdir/CVS; \
 	done
 	rm -f $(distdir)/lib/conf.pl
+
+rpm:
+	# put Namazu's tar-ball to a correct directory before do this
+	rpm -ba namazu.spec
