--- a/lib/conf.pl.in
+++ b/lib/conf.pl.in
@@ -1,5 +1,5 @@
-#
 # -*- Perl -*-
+# $Id: conf.pl.in,v 1.4 1999-05-29 08:56:35 satoru Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi  All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
@@ -32,43 +32,59 @@ $NMZ_URL = "http://openlab.ring.gr.jp/namazu/";
 
 # Japanese usage
 $USAGE_JA = <<EOFusage;
-  mknmz.pl v$VERSION -  全文検索システム Namazu のインデックス作成プログラム
-  $COPYRIGHT
+mknmz v$VERSION -  全文検索システム Namazu のインデックス作成プログラム
+$COPYRIGHT
 
-  使い方: $0 [options] [URL_PREFIX] <対象dir>
-      -a: すべてのファイルを対象とする
-      -c: 日本語の単語のわかち書きに ChaSen を用いる
-      -e: ロボットよけされているファイルを除外する
-      -h: Mail/News のヘッダ部分をそれなりに処理する
-      -k: 日本語の単語のわかち書きに KAKASI を用いる
-      -m: ChaSen の形態素解析の品詞情報を利用する (名詞のみ登録)
-      -q: インデックス処理の最中にメッセージを表示しない
-      -r: man のファイルを処理する
-      -u: uuencode と BinHex の部分を無視する
-      -x: HTML のヘディングによる要約作成を行わない (文書の先頭から作成)
-      -s: チェックポイント機構を作動させる (定期的に自身を exec する)
-      -D: Date:, From: といったヘッダを要約につけない (ディフォルトではつける)
-      -E: 単語の両端の記号は削除する (ディフォルトでは含める)
-      -G: 送り仮名を削除する (ディフォルトでは含める)
-      -H: 平仮名のみの単語は登録しない (ディフォルトでは登録を行う)
-      -K: 記号はすべて削除する (ディフォルトでは登録を行う)
-      -L: 行頭・行末の調整処理を行わない (ディフォルトでは調整を行う)
-      -M: MHonArc で作成された HTML の処理を行わない (ディフォルトでは行う)
-      -P: フレーズ検索用のインデックスを作成しない (ディフォルトでは作成する)
-      -R: 正規表現検索用のインデックスを作成しない (ディフォルトでは作成する)
-      -U: URLのencodeを行わない (ディフォルトでは行う)
-      -W: 日付によるソート用のインデックス作らない (ディフォルトでは作成する)
-      -X: フィールド検索用のインデックスを作らない (ディフォルトでは作成する)
-      -Y: 削除された文書の検出を行わない (ディフォルトでは行う)
-      -Z: 文書の更新/削除を反映しない (ディフォルトでは行う)
-      -A: .htaccess で制限されたファイルを除外する
-      -l (lang): 言語を設定する ('en' or 'ja')
-      -F (file): インデックス対象のファイルのリストを読み込む
-      -I (file): ユーザ定義のファイルをインクルードする
-      -O (dir) : インデックスファイルの出力先を指定する
-      -T (dir) : NMZ.{head,foot,body}.* のディレクトリを指定する
-      -t (regex): 対象ファイルの正規表現を指定する
+使い方: mknmz [options] [URL_PREFIX] <対象dir>
 
+  対象ファイル:
+    -a, --all:               すべてのファイルを対象とする
+    -e, --robots-txt:        ロボットよけされているファイルを除外する
+    -A, --htaccess           .htaccess で制限されたファイルを除外する
+    -F, --target-list=file:  インデックス対象のファイルのリストを読み込む
+    -t, --allow-regex=regex: 対象ファイルの正規表現を指定する
+
+  形態素解析:
+    -c, --use-chasen:       日本語の単語のわかち書きに ChaSen を用いる
+    -k, --use-kakasi:       日本語の単語のわかち書きに KAKASI を用いる
+    -m, --use-chasen-morph: 名詞のみを抽出する
+
+  フィルタ制御:
+    -r, --man:         man のファイルを処理する
+    -u, --uuencode:    uuencode と BinHex の部分を無視する
+    -h, --rfc822:      Mail/News のヘッダ部分をそれなりに処理する
+    -M, --no-mhonarc:  MHonArc で作成された HTML の処理を行わない
+
+  文字列処理:
+    -E, --no-edge-symbol: 単語の両端の記号は削除する
+    -G, --no-okurigana:   送り仮名を削除する
+    -H, --no-hiragana:    平仮名のみの単語は登録しない
+    -K, --no-symbol:      記号をすべて削除する
+    -L, --no-line-adjust: 行頭・行末の調整処理を行わない
+
+  要約:
+    -U, --no-encode-url:      URLのencodeを行わない
+    -D, --no-insert-headers:  Date:, From: といったヘッダを要約につけない
+    -x, --no-heading-summary: HTML のヘディングによる要約作成を行わない
+
+
+  インデックス作成:
+    -P, --no-heading-summary: フレーズ検索用のインデックスを作成しない
+    -R, --no-regex-index:     正規表現検索用のインデックスを作成しない
+    -W, --no-date-index:      日付によるソート用のインデックス作成しない
+    -X, --no-field-index:     フィールド検索用のインデックスを作成しない
+    -Y, --no-delete:          削除された文書の検出を行わない
+    -Z, --no-update:          文書の更新/削除を反映しない
+
+  その他:
+    -s, --checkpoint:       チェックポイント機構を作動させる
+    -q, --quiet:            インデックス処理の最中にメッセージを表示しない
+    -I, --include=file:     カスタマイズ用ファイルを読み込む
+    -O, --output-dir=dir:   インデックスの出力先を指定する
+    -T, --template-dir=dir: NMZ.{head,foot,body}.* のディレクトリを指定する
+    -l, --lang=lang:        言語を設定する ('en' or 'ja')
+    -v, --version:          ヴァージョンを表示する
+    -0, --help:             このヘルプを表示する
 EOFusage
 
 $USAGE_EN = <<EOFusage;
@@ -166,7 +182,7 @@ $DEFAULT_FILE = "_default";
 ## do *not* use '$' and '^' regular expression meta charactors.
 ## that will be automatically appended by mknmz.pl.
 ##
-$TARGET_FILE = '.*\.html?|.*\.txt|.*_default';
+$ALLOW_REGEX = '.*\.html?|.*\.txt|.*_default';
 
 ## Non-Target files' regex
 ## this regular expression describes the names of the files which
@@ -175,7 +191,7 @@ $TARGET_FILE = '.*\.html?|.*\.txt|.*_default';
 ## do *not* use '$' and '^' regular expression meta charactors.
 ## that will be automatically appended by mknmz.pl.
 ##
-$DENY_FILE = '.*\.gif|.*\.(jpg|jpeg)|.*\.tar\.gz|core|.*\.bak|.*~|\..*|\x23.*|NMZ\..*';
+$DENY_REGEX = '.*\.gif|.*\.(jpg|jpeg)|.*\.tar\.gz|core|.*\.bak|.*~|\..*|\x23.*|NMZ\..*';
 
 ## HTML extentions like .htm, .html, .shtml, .phtml, .html.en, .html.ja, .asp
 $HTML_SUFFIX = 'html?|[ps]html|html\.[a-z]{2}|asp|cgi';
