--- a/lib/conf.pl.in
+++ b/lib/conf.pl.in
@@ -1,5 +1,5 @@
 # -*- Perl -*-
-# $Id: conf.pl.in,v 1.4 1999-05-29 08:56:35 satoru Exp $
+# $Id: conf.pl.in,v 1.5 1999-05-30 10:37:19 satoru Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi  All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
@@ -38,53 +38,53 @@ $COPYRIGHT
 使い方: mknmz [options] [URL_PREFIX] <対象dir>
 
   対象ファイル:
-    -a, --all:               すべてのファイルを対象とする
-    -e, --robots-txt:        ロボットよけされているファイルを除外する
+    -a, --all                すべてのファイルを対象とする
+    -e, --robots-txt         ロボットよけされているファイルを除外する
     -A, --htaccess           .htaccess で制限されたファイルを除外する
-    -F, --target-list=file:  インデックス対象のファイルのリストを読み込む
-    -t, --allow-regex=regex: 対象ファイルの正規表現を指定する
+    -F, --target-list=file   インデックス対象のファイルのリストを読み込む
+    -t, --allow-regex=regex  対象ファイルの正規表現を指定する
 
   形態素解析:
-    -c, --use-chasen:       日本語の単語のわかち書きに ChaSen を用いる
-    -k, --use-kakasi:       日本語の単語のわかち書きに KAKASI を用いる
-    -m, --use-chasen-morph: 名詞のみを抽出する
+    -c, --use-chasen        日本語の単語のわかち書きに ChaSen を用いる
+    -k, --use-kakasi        日本語の単語のわかち書きに KAKASI を用いる
+    -m, --use-chasen-morph  名詞のみを抽出する
 
   フィルタ制御:
-    -r, --man:         man のファイルを処理する
-    -u, --uuencode:    uuencode と BinHex の部分を無視する
-    -h, --rfc822:      Mail/News のヘッダ部分をそれなりに処理する
-    -M, --no-mhonarc:  MHonArc で作成された HTML の処理を行わない
+    -r, --man          man のファイルを処理する
+    -u, --uuencode     uuencode と BinHex の部分を無視する
+    -h, --rfc822       Mail/News のヘッダ部分をそれなりに処理する
+    -M, --no-mhonarc   MHonArc で作成された HTML の処理を行わない
 
   文字列処理:
-    -E, --no-edge-symbol: 単語の両端の記号は削除する
-    -G, --no-okurigana:   送り仮名を削除する
-    -H, --no-hiragana:    平仮名のみの単語は登録しない
-    -K, --no-symbol:      記号をすべて削除する
-    -L, --no-line-adjust: 行頭・行末の調整処理を行わない
+    -E, --no-edge-symbol  単語の両端の記号は削除する
+    -G, --no-okurigana    送り仮名を削除する
+    -H, --no-hiragana     平仮名のみの単語は登録しない
+    -K, --no-symbol       記号をすべて削除する
+    -L, --no-line-adjust  行頭・行末の調整処理を行わない
 
   要約:
-    -U, --no-encode-url:      URLのencodeを行わない
-    -D, --no-insert-headers:  Date:, From: といったヘッダを要約につけない
-    -x, --no-heading-summary: HTML のヘディングによる要約作成を行わない
+    -U, --no-encode-url       URLのencodeを行わない
+    -D, --no-insert-headers   Date:, From: といったヘッダを要約につけない
+    -x, --no-heading-summary  HTML のヘディングによる要約作成を行わない
 
 
   インデックス作成:
-    -P, --no-heading-summary: フレーズ検索用のインデックスを作成しない
-    -R, --no-regex-index:     正規表現検索用のインデックスを作成しない
-    -W, --no-date-index:      日付によるソート用のインデックス作成しない
-    -X, --no-field-index:     フィールド検索用のインデックスを作成しない
-    -Y, --no-delete:          削除された文書の検出を行わない
-    -Z, --no-update:          文書の更新/削除を反映しない
+    -P, --no-heading-summary  フレーズ検索用のインデックスを作成しない
+    -R, --no-regex-index      正規表現検索用のインデックスを作成しない
+    -W, --no-date-index       日付によるソート用のインデックス作成しない
+    -X, --no-field-index      フィールド検索用のインデックスを作成しない
+    -Y, --no-delete           削除された文書の検出を行わない
+    -Z, --no-update           文書の更新/削除を反映しない
 
   その他:
-    -s, --checkpoint:       チェックポイント機構を作動させる
-    -q, --quiet:            インデックス処理の最中にメッセージを表示しない
-    -I, --include=file:     カスタマイズ用ファイルを読み込む
-    -O, --output-dir=dir:   インデックスの出力先を指定する
-    -T, --template-dir=dir: NMZ.{head,foot,body}.* のディレクトリを指定する
-    -l, --lang=lang:        言語を設定する ('en' or 'ja')
-    -v, --version:          ヴァージョンを表示する
-    -0, --help:             このヘルプを表示する
+    -s, --checkpoint        チェックポイント機構を作動させる
+    -q, --quiet             インデックス処理の最中にメッセージを表示しない
+    -I, --include=file      カスタマイズ用ファイルを読み込む
+    -O, --output-dir=dir    インデックスの出力先を指定する
+    -T, --template-dir=dir  NMZ.{head,foot,body}.* のディレクトリを指定する
+    -l, --lang=lang         言語を設定する ('en' or 'ja')
+    -v, --version           ヴァージョンを表示する
+    -0, --help              このヘルプを表示する
 EOFusage
 
 $USAGE_EN = <<EOFusage;
