--- a/Makefile.in
+++ b/Makefile.in
@@ -60,6 +60,7 @@ CHASEN = @CHASEN@
 EXEEXT = @EXEEXT@
 GROFF = @GROFF@
 KAKASI = @KAKASI@
+LEX = @LEX@
 LN_S = @LN_S@
 MAKEINFO = @MAKEINFO@
 NKF = @NKF@
@@ -85,9 +86,9 @@ mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = config.h
 CONFIG_CLEAN_FILES =  namazu.spec
 DIST_COMMON =  README ./stamp-h.in AUTHORS COPYING ChangeLog INSTALL \
-Makefile.am Makefile.in NEWS THANKS TODO acconfig.h aclocal.m4 \
-config.h.in configure configure.in install-sh missing mkinstalldirs \
-namazu.spec.in
+Makefile.am Makefile.in NEWS THANKS TODO acconfig.h acinclude.m4 \
+aclocal.m4 config.h.in configure configure.in install-sh missing \
+mkinstalldirs namazu.spec.in
 
 
 DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
@@ -103,7 +104,7 @@ Makefile: $(srcdir)/Makefile.in  $(top_builddir)/config.status $(BUILT_SOURCES)
 	cd $(top_builddir) \
 	  && CONFIG_FILES=$@ CONFIG_HEADERS= $(SHELL) ./config.status
 
-$(ACLOCAL_M4):  configure.in 
+$(ACLOCAL_M4):  configure.in  acinclude.m4
 	cd $(srcdir) && $(ACLOCAL)
 
 config.status: $(srcdir)/configure $(CONFIG_STATUS_DEPENDENCIES)
